--- a/src/main/resources/static/PostFormFetch.html
+++ b/src/main/resources/static/PostFormFetch.html
@@ -91,6 +91,27 @@
                 })
                 .catch(afficheMessage);
         }
+
+        function supprimerCategorie(lien){
+            fetch(lien,
+                {
+                    method: 'delete',
+                })
+                .then(response => {
+                    // On vérifie le code de retour de la requête
+                    switch (response.status) {
+                        case 201: // Created: ça s'est bien passé
+                            // On recharge la liste des catégories
+                            chargeCategories();
+                            break;
+                        case 409: // Conflict: 
+                            afficheMessage("");
+                            break;
+                    }
+                })
+                .catch(afficheMessage);
+        }
+
     </script>
 </head>
 
@@ -116,11 +137,11 @@
         <h2>Liste des catégories ({{_embedded.categories.length}} / {{page.totalElements}})</h2>
         <TABLE>
         {{! Un commentaire Mustache }}
-        <TR><TH>Code</TH><TH>Libelle</TH><TH>Description</TH></TR>
+        <TR><TH>Code</TH><TH>Libelle</TH><TH>Action</TH></TR>
         {{! Pour chaque categorie dans le tableau 'categories' }}
         {{#_embedded.categories}}
         {{! Une ligne dans la table }}
-        <TR><TD>{{code}}</TD><TD>{{libelle}}</TD><TD>{{description}}</TD></TR>
+        <TR><TD>{{code}}</TD><TD>{{libelle}}</TD><TD><button type="button" id="supprimerButton" value={{code}} onclick="supprimerCategorie('{{_links.self.href}})'>Supprimer</button></TD></TR>
         {{/_embedded.categories}}
         </TABLE>
     </script>
